--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,124 @@ header{
     background-position: center; */
 }
 
+.header-box{
+    position: relative;
+    display: flex;
+    justify-content: center;
+    border-radius: 30px;
+    width: 200px;
+    height: 250px;
+    background-color: linear-gradient(to bottom, #536976, #292e49);
+    overflow: hidden;
+}
+.header-box:before{
+    content: '';
+    position: absolute;
+    width: 100px;
+    height: 300%;
+    background:linear-gradient(#00ccff, #d400d4);
+    animation: animate1 5s linear infinite;
+}
+@keyframes animate1 {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(-360deg);
+    }
+}
+.header-box:after{
+    content: '';
+    position: absolute;
+    inset: 8px;
+    background: #292e49;
+    border-radius: 20px;
+}
+
+.header-box2 {
+    position: absolute;
+    display: flex;
+    justify-content: center;
+    border-radius: 30px;
+    top: 150px;
+    right: -150px;
+    width: 250px;
+    height: 200px;
+    background-color: linear-gradient(to bottom, #536976, #292e49);
+    overflow: hidden;
+}
+
+.header-box2:before {
+    content: '';
+    position: absolute;
+    width: 100px;
+    height: 300%;
+    bottom: -150px;
+    left: 150px;
+    background: linear-gradient(#00ccff, #d400d4);
+    animation: animate2 7s linear infinite;
+}
+
+@keyframes animate2 {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+.header-box2:after {
+    content: '';
+    position: absolute;
+    inset: 8px;
+    background: #292e49;
+    border-radius: 20px;
+}
+
+.header-box3 {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    border-radius: 30px;
+    top: 0px;
+    right: -250px;
+    width: 200px;
+    height: 250px;
+    background-color: linear-gradient(to bottom, #536976, #292e49);
+    overflow: hidden;
+}
+
+.header-box3:before {
+    content: '';
+    position: absolute;
+    width: 100px;
+    height: 200%;
+    bottom: -150px;
+    left: 150px;
+    background: linear-gradient(#00ccff, #d400d4);
+    animation: animate3 9s linear infinite;
+}
+
+@keyframes animate3 {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(-360deg);
+    }
+}
+
+.header-box3:after {
+    content: '';
+    position: absolute;
+    inset: 8px;
+    background: #292e49;
+    border-radius: 20px;
+}
 nav{
     display: flex;
     justify-content: space-between;
@@ -125,7 +243,8 @@ h4{
     transform: translateX(5px);
 }
 #about{
-    background: #292e49;
+    /* background: #292e49; */
+    background: linear-gradient(to left, #536976, #292e49);
 }
 .about{
     width: 100%;
@@ -136,7 +255,9 @@ h4{
     gap: 5%;
 }
 .about img{
-    width: 300px;
+    width: 450px;
+    box-shadow: #000;
+    background-blend-mode: darken;
 }
 .about-text{
     width: 500px;
@@ -178,7 +299,8 @@ button:hover{
     cursor: pointer;
 }
 #services{
-    background: #536976;
+    /* background: #536976; */
+    background: linear-gradient(to right, #536976, #292e49);
     width: 100%;
     padding: 100px 0;
 }
@@ -246,7 +368,8 @@ h5{
 .contact{
     width: 100%;
     height: 300px;
-    background: #292e49;
+    /* background: #292e49; */
+    background: linear-gradient(to top, #536976, #292e49);
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -256,14 +379,22 @@ h5{
     align-items: center;
     display: flex;
     justify-content: center;
+    flex-direction: row;
 }
 .contact-dets .mail p{
     width: 70%;
+    letter-spacing: 1px;
 }
 .contact-dets .mobile{
     margin-left: 10%;
     border-left: 2px solid white;
     padding-left: 10%;
+    line-height: 2px;
+    letter-spacing: 1px;
+}
+.contact-dets .mobile h3{
+    padding: 0;
+    margin-bottom: 35px;
 }
 .contact-dets .mobile p{
     width: max-content;
@@ -297,7 +428,8 @@ footer{
     position: relative;
     width: 100%;
     height: 400px;
-    background: #536976;
+    /* background: #536976; */
+    background: #292e49;
     display: flex;
     justify-content: center;
     align-items: center;
