--- a/styles.css
+++ b/styles.css
@@ -143,6 +143,22 @@ nav {
     padding: 30px 8% 0;
 }
 
+  .open {
+            background-color: #292e49;
+            display: inline-flex;
+            flex-direction: column;
+            justify-content: center;
+            padding: 15px;
+            position: absolute;
+            right: 8%;
+            top: 35px;
+            align-items: center;
+  }
+
+.nav-list2{
+    display: none;
+}
+
 .logo {
     color: white;
     font-size: xx-large;
@@ -175,10 +191,18 @@ nav ul li a:hover {
 }
 
 #burger {
-    color: white;
-    font-size: 30px;
+    z-index: 10;
+    cursor: pointer;
     display: none;
-    transition: all .55s ease;
+}
+
+.bar{
+    background-color: white;
+    display: block;
+    width: 25px;
+    height: 3px;
+    margin: 5px 0;
+    transition: all .3s ease;
 }
 
 .btn {
@@ -543,7 +567,7 @@ footer p:nth-child(2) {
 
 @media(max-width: 1020px) {
     .introduction{
-        margin: 50px 0;
+        margin-top: 100px;
     }
     nav li a {
         font-size: smaller;
@@ -785,24 +809,31 @@ footer p:nth-child(2) {
 }
 
 @media(max-width: 920px) {
+    #burger {
+            display: block;
+        }
+    #burger.active .bar:nth-child(2){
+        opacity: 0;
+    }
+          #burger.active .bar:nth-child(1) {
+              transform: translateY(8px) rotate(45deg);
+          }
+                        #burger.active .bar:nth-child(3) {
+            transform: translateY(-8px) rotate(-45deg);
+                        }
+
     .introduction{
-        margin: 70px 0;
+        margin-top: 120px;
     }
     #nav-list {
         display: none;
-    }
-
-    #burger {
-        display: block;
     }
 
     .btn {
         display: none;
     }
 
-    .open {
-        display: none;
-    }
+  
 
     .header-box {
         margin-left: 25px;
