--- a/styles.css
+++ b/styles.css
@@ -644,7 +644,9 @@ footer p:nth-child(2) {
         width: 100px;
         height: 150px;
     }
-
+    #about{
+        height: 70vh;
+    }
     .about {
         padding: 50px 0;
     }
