--- a/styles.css
+++ b/styles.css
@@ -646,6 +646,7 @@ footer p:nth-child(2) {
     }
     #about{
         height: 70vh;
+        padding: 100px;
     }
     .about {
         padding: 50px 0;
