--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 }
 
 header {
-    height: 100vh;
+    height: 70vh;
     width: 100%;
     background: linear-gradient(to right, #536976, #292e49);
     /* background-size: cover;
@@ -367,7 +367,7 @@ h4 {
     /* background: #536976; */
     background: linear-gradient(to right, #536976, #292e49);
     width: 100%;
-    padding: 100px 0;
+    padding: 100px;
 }
 
 .services h2 {
