--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 }
 
 header {
-    height: 70vh;
+    height: 100vh;
     width: 100%;
     background: linear-gradient(to right, #536976, #292e49);
     /* background-size: cover;
@@ -301,6 +301,7 @@ h4 {
 
 .about {
     width: 100%;
+    height: auto;
     padding: 100px 0;
     display: flex;
     justify-content: center;
@@ -575,6 +576,10 @@ footer p:nth-child(2) {
     bottom: 20px;
 }
 
+.R-introduction{
+    padding: 150px 8%;
+}
+
 @media(max-width: 1020px) {
     .introduction {
         margin-top: 100px;
@@ -623,9 +628,7 @@ footer p:nth-child(2) {
         right: 5px;
     }
 
-    .header {
-        height: 75vh;
-    }
+
 
     .header-box {
         margin-left: 50px;
@@ -1054,7 +1057,7 @@ footer p:nth-child(2) {
     text-transform: uppercase;
 }
 
-@media(min-width:300px) {
+@media(max-width:350px) {
     #img {
         display: none;
     }
